Player buttons spacing issue
Small issue with player buttons spacing was fixed.

--- a/General.css
+++ b/General.css
@@ -76,7 +76,8 @@
 	Table.VolumeControl span#VolumeNumber { position: absolute; top: 3.5px; left: 22px; }
 	Table.VolumeControl input.VolumeControl { width: 0px; opacity: 0; }
 	Table.VolumeControl:hover input.VolumeControl, Table.VolumeControl:active input.VolumeControl { width: 118%; top: -1px; }
-	span.PlayButtonsSection input[type=button] { font-size: 7.5pt; font-weight: bold; width: 41px; }
+	span.PlayButtonsSection input[type=button]:first-child { margin-left: 2px; }
+	span.PlayButtonsSection input[type=button] { font-size: 7.5pt; font-weight: bold; width: 40px; }
 	div.SongCount { padding: 1px 3px 1px 3px; width: 52px; border-radius: 7px; position: absolute; top: 25px; left: 1px; font-weight: bold; font-size: 5pt; opacity: 1; }
 	span.ThemeSelectionContainer { position: relative; padding-left: 45px; }
 	div.ThemeSelection { display: block; height: 8px; width: 40px; position: absolute; bottom: 0; padding: 1px; left: 0; border-radius: 10px; scroll-behavior: smooth; font-size: 4pt; transition: 1s; overflow: hidden; }
